--- a/todo.txt
+++ b/todo.txt
@@ -18,9 +18,8 @@ Paths :
 
 Struct :
 (soon) add other kind of structures : rectangles, regular polygons, circles, all with appropriate sliders if needed.
-(soon) structres should be removable, grouppable, and displayed as a list.
+(soon) structres should be removable, grouppable.
 (soon) selected structure need visual feedback on the map
-(later) snapping magnetism should probably be zoom-invarient (so that if we need more precision we can zoom and the snap is relatively smaller)
 (later) some ui on the right panel for per-struct parameters (can be displayed once for selected struct)
 
 Labels :
