--- a/todo.txt
+++ b/todo.txt
@@ -21,9 +21,8 @@ Paths :
 (later) width definer similar to water but using pathfinding to define more important roads
 
 Struct :
-(soon) structures should be removable
-(soon) selected structure need visual feedback on the map
-(later) structres should be groupable
+(soon) selected structure needs visual feedback on the map
+(later) structures should be groupable
 (later) some ui on the right panel for per-struct parameters (can be displayed once for selected struct)
 
 Labels :
