--- a/todo.txt
+++ b/todo.txt
@@ -23,17 +23,20 @@ Zones :
 Paths :
 (later) width definer similar to water but using pathfinding to define more important roads
 (later) taping sometimes wrong (probably needs doubly connected edges and propagation done right)
+(later) option to generate paths
 
 Struct :
 (later) structures should be groupable
 (soon) some ui on the right panel for per-struct parameters (can be displayed once on top of the list for selected struct): name, size, type, angle, color (allow transparent)
 (later) structure should snap to zones
 (later) there should be checkboxes to what the structures can snap to: water, biomes, underwater biomes, zones, paths, other structures (only show snapping feedback overlay lines when snapping for a given feature is enabled)
+(later) option to generate structs
 
 Labels :
 (later) optionally associate labels with map elements
 (later) have type presets for label styles (like with path types)
 (later) text size should be handled better (typo appears blurry)
+(later) option to generate labels
 
 Rendering :
 (later) zones should have options to be replaced by pattern of items (eg place trees for forest instead of green color).
@@ -60,7 +63,6 @@ General :
 (later) Multithreading could be used for cpu intensive tasts such as pathfinding or voronoi.
 (soon) MapModel.pde file is very long, could it be subdivided? (might be hard since single class)
 (later) option to generate details (about everything) for zooming
-(soon) ui indications could be more than two lines instead of using "; "
 (later) very top panel should have a little bit more padding on the bottom, jus a few px to allow bottom of text to be good visually
 (soon) list selections should feel more like win95 circular radio (beveled white hole, with black dot in it when selected)
 (later) check useless variables, problems tabs and stuff like those
