split mapmodel class

--- a/todo.txt
+++ b/todo.txt
@@ -66,4 +66,4 @@ General :
 (later) very top panel should have a little bit more padding on the bottom, jus a few px to allow bottom of text to be good visually
 (soon) investigate caching options
 (soon) scrollbars for long right-panel lists
-(soon) MapModel.pde file is very long, could it be subdivided? (might be hard since single class)
+(later) "generate" buttons should preferably be on top
